--- a/HelpOrt.html
+++ b/HelpOrt.html
@@ -112,14 +112,16 @@
               <ul>
                 <li><strong>Dénomination</strong>: HelpOrt</li>
                 <li><strong>Languages</strong>: PHP, HTML, CSS / Java, SQL</li>
+                <li><strong>IDE</strong>: PhpStorm / IntelliJ Idea</li>
                 <li><strong>Framework</strong>: Symfony / Java FXML</li>
               </ul>
             </div>
             <div class="portfolio-info">
               <h3>Historique</h3>
               <p>
-              Ce projet à pour but de créer un forum d'entraide pour les étudiants.
-                Ils postent une demande d'aide pour une matière, et un étudiant plus agé peut lui apporter un soutien.
+              Ce projet à pour but de créer un forum d'entraide pour les étudiants. <br>
+                Un étudiant dans le besoin poste une demande d'aide pour une matière, et un étudiant plus agé peut lui apporter un soutien.<br>
+                Un administrateur est présent pour gérer les différents soutien et leurs attribuer une salle.
               </p>
             </div>
             <div class="portfolio-info">
