--- a/IDC.html
+++ b/IDC.html
@@ -41,7 +41,7 @@
           <li><a class="nav-link scrollto" href="index.html#about">A Propos</a></li>
           <li><a class="nav-link scrollto" href="index.html#services">Parcours</a></li>
           <li><a class="nav-link scrollto" href="index.html#work">Projets</a></li>
-          <li class="dropdown"><a href="#"><span>Stages</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Stages</span></a>
             <ul>
               <li><a href="stage1.html">Première Année</a></li>
               <li><a href="stage2.html">Deuxième Année</a></li>
@@ -100,10 +100,9 @@
               <ul>
                 <li><strong>Dénomination</strong>: Icon Developpement Center</li>
                 <li><strong>Forme juridique prévue</strong>: SAS </li>
-                <li><strong>Taille</strong>: Petite entreprise</li>
-                <li><strong>Effectif</strong>: 2 personnes</li>
                 <li><strong>Secteur d’activité</strong>: Décoration d'intérieur et Bureautique</li>
                 <li><strong>Languages</strong>: PHP, HTML, CSS, SQL</li>
+                <li><strong>IDE</strong>: PhpStorm</li>
                 <li><strong>Framework</strong>: Symfony</li>
               </ul>
             </div>
