--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li><a class="nav-link scrollto" href="#services">Parcours</a></li>
           <li><a class="nav-link scrollto " href="#work">Projets</a></li>
           <li><a class="nav-link scrollto " href="#blog">Documents</a></li>
-          <li class="dropdown"><a href="#"><span>Stages</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Stages</span></a>
             <ul>
               <li><a href="stage1.html">Première Année</a></li>
               <li><a href="stage2.html">Deuxième année</a></li>
@@ -182,13 +182,13 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
+                <span class="ico-circle"><img src="images/briefcase-fill.png"> </span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Troisième</h2>
                 <p class="s-description text-center">
                  Collège: Les-Gâtines René Cassin <br>
-                  Année: 2014-2019 <br>
+                  Années: 2014-2019 <br>
                   Diplôme: Brevet des Collèges
                 </p>
               </div>
@@ -197,13 +197,13 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
+                <span class="ico-circle"><img src="images/card-checklist.png"> </span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Lycée</h2>
                 <p class="s-description text-center">
                   Lycée: Jean-Baptiste Corot <br>
-                  Année: 2019-2023 <br>
+                  Années: 2019-2022 <br>
                   Diplôme: Baccaloréat Général
                 </p>
               </div>
@@ -212,13 +212,13 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-bar-chart"></i></span>
+                <span class="ico-circle"><img src="images/bar-chart-line-fill.png"> </span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">BTS SIO</h2>
                 <p class="s-description text-center">
                   Ecole: ORT Daniel Mayer<br>
-                  Année: 2022-2024 <br>
+                  Années: 2022-2024 <br>
                   Diplôme: BTS Informatique
                 </p>
               </div>
@@ -236,7 +236,7 @@
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box counter-box pt-4 pt-md-0">
               <div class="counter-ico">
-                <span class="ico-circle"><i class="bi bi-check"></i></span>
+                <span class="ico-circle"><img src="images/bag-check.png" style="width: 40px; height: 40px"></span>
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="1" class="counter purecounter"></p>
@@ -247,7 +247,7 @@
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
-                <span class="ico-circle"><i class="bi bi-journal-richtext"></i></span>
+                <span class="ico-circle"><img src="images/journal-richtext.png" style="width: 40px; height: 40px"></span>
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="70" data-purecounter-duration="1" class="counter purecounter"></p>
@@ -258,7 +258,7 @@
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
-                <span class="ico-circle"><i class="bi bi-people"></i></span>
+                <span class="ico-circle"><img src="images/people.png" style="width: 40px; height: 40px"></span>
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="95" data-purecounter-duration="1" class="counter purecounter"></p>
@@ -269,7 +269,7 @@
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
-                <span class="ico-circle"><i class="bi bi-award"></i></span>
+                <span class="ico-circle"><img src="images/award.png" style="width: 40px; height: 40px"></span>
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="90" data-purecounter-duration="1" class="counter purecounter"></p>
@@ -394,11 +394,11 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="images/HelpOrtWeb.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="HelpOrt.html">
-                <div class="work-img">
-                  <img src="images/HelpOrtJava.png" alt="" class="img-fluid">
+          <div class="col-md-4"  style="height: 70.5vh;">
+            <div class="work-box" style="height: 70.5vh;">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="HelpOrt.html">
+                <div class="work-img" style="height: 56vh;">
+                  <img src="images/HelpOrtJava.png" alt="" class="img-fluid" style="height: 60vh;">
                 </div>
               </a>
               <div class="work-content">
@@ -418,6 +418,31 @@
               </div>
             </div>
           </div>
+          <div class="col-md-4">
+            <div class="work-box" style="height: 70.5vh;">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="Hackathon.html">
+                <div class="work-img"style="height: 56vh;">
+                  <img src="images/Orange.png" alt="" class="img-fluid"  style="height: 56vh;">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Hackathon</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Harmon'IA</span> / Début: <span class="w-date">Décembre 2023</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Hackathon.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
         </div>
       </div>
@@ -443,7 +468,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="dossier/AmauryLefevre-CV.pdf" download="CV_Amaury_Lefevre"><img src="images/RealCVScreen.png" alt="" class="img-fluid" ></a>
+                <a href="dossier/Amaury_Lefevre_CV.pdf" download="CV_Amaury_Lefevre"><img src="images/cvHome.png" alt="" class="img-fluid" style="height: 34vh"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -451,7 +476,7 @@
                     <h6 class="category">CV</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="dossier/AmauryLefevre-CV.pdf" download="CV_Amaury_Lefevre">Mon CV</a></h3>
+                <h3 class="card-title"><a href="dossier/Amaury_Lefevre_CV.pdf" download="CV_Amaury_Lefevre">Mon CV</a></h3>
                 <p class="card-description">
                   Ce CV est mis à jour que pour le plus important.
                 </p>
@@ -470,7 +495,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="dossier/Tableau_Synthese.pdf" download="Tableau_De_Synthèse_Amaury_Lefevre"><img src="images/tcScreen.png" alt="" class="img-fluid" height="300"></a>
+                <a href="dossier/Tableau_de_synthèse_Epreuve_E4_BTS_SIO_2024.pdf" download="Tableau_De_Synthèse_Amaury_Lefevre"><img src="images/tcScreen.png" alt="" class="img-fluid" height="300"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -478,7 +503,7 @@
                     <h6 class="category">Tableau de Compétences</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="dossier/Tableau_Synthese.pdf" download="Tableau_De_Synthèse_Amaury_Lefevre">Mon Tableau de Compétences</a></h3>
+                <h3 class="card-title"><a href="dossier/Tableau_de_synthèse_Epreuve_E4_BTS_SIO_2024.pdf" download="Tableau_De_Synthèse_Amaury_Lefevre">Mon Tableau de Compétences</a></h3>
                 <p class="card-description">
                   Ce tableau regroupe les principales compétences réquises que j'ai coché pour chaque projet.
                 </p>
@@ -496,7 +521,8 @@
 
         </div>
       </div>
-    </section><!-- End Blog Section -->
+    </section><!-- End Doc Section -->
+
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
@@ -505,33 +531,70 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="contact-mf">
-              <div id="contacter" class="box-shadow-full">
+              <div id="contacts" class="box-shadow-full">
                 <div class="row">
-
+                  <div class="col-md-6">
+                    <div class="title-box-2">
+                      <h5 class="title-left">
+                        Send Message Us
+                      </h5>
+                    </div>
+                    <div>
+                      <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                        <div class="row">
+                          <div class="col-md-12 mb-3">
+                            <div class="form-group">
+                              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                            </div>
+                          </div>
+                          <div class="col-md-12 mb-3">
+                            <div class="form-group">
+                              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                            </div>
+                          </div>
+                          <div class="col-md-12 mb-3">
+                            <div class="form-group">
+                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                            </div>
+                          </div>
+                          <div class="col-md-12">
+                            <div class="form-group">
+                              <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                            </div>
+                          </div>
+                          <div class="col-md-12 text-center my-3">
+                            <div class="loading">Loading</div>
+                            <div class="error-message"></div>
+                            <div class="sent-message">Your message has been sent. Thank you!</div>
+                          </div>
+                          <div class="col-md-12 text-center">
+                            <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
                   <div class="col-md-6">
                     <div class="title-box-2 pt-4 pt-md-0">
                       <h5 class="title-left">
-                        Mes Contacts
+                        Get in Touch
                       </h5>
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        Il est tout de même assez simple de me contacter. Je suis présent sur quasiment tous les réseaux sociaux comme Instagram, LinkeDIn,
-                        Twitter, FaceBook et même les plateformes de Streaming comme Youtube ou Twitch.
+                        Il est tout de même assez simple de me contacter. Je suis présent sur quasiment les réseaux sociaux tels que LinkeDIn ou Github.
 
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> 43 Avenue du Général Louis Morand, Savigny Sur Orge, 91600</li>
-                        <li><span class="bi bi-phone"></span> 06 30 32 81 11</li>
-                        <li><span class="bi bi-envelope"></span> amaury.lefevre@outlook.fr.fr</li>
+                        <li><span class="bi"><img src="images/geo-alt.png" style="height: 3vh;"></span> 43 Avenue du Général Louis Morand, Savigny Sur Orge, 91600</li>
+                        <li><span class="bi"><img src="images/telephone.png" style="height: 3vh;"></span> <a  href="tel:0630328111">06 30 32 81 11</a></li>
+                        <li><span class="bi"><img src="images/envelope.png" style="height: 3vh;"></span> <a href="mailto:amaury.lefevre@outlook.fr">amaury.lefevre@outlook.fr</a></li>
                       </ul>
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href="https://www.linkedin.com/in/amaury-lefevre-3ab249294/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href="https://github.com/AmauryLef"><span class="ico-circle"><img src="images/github.png" style="width: 100%;"></i></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/amaury-lefevre-3ab249294/"><span class="ico-circle"><img src="images/1-removebg-preview%20(1).png" style="width: 100%;"></span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -542,6 +605,7 @@
         </div>
       </div>
     </section><!-- End Contact Section -->
+
 
   </main><!-- End #main -->
 
@@ -568,7 +632,7 @@
   </footer><!-- End  Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><img src="images/plus-circle.png"></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
