--- a/stage1.html
+++ b/stage1.html
@@ -41,7 +41,7 @@
           <li><a class="nav-link scrollto" href="index.html#about">A Propos</a></li>
           <li><a class="nav-link scrollto" href="index.html#services">Parcours</a></li>
           <li><a class="nav-link scrollto" href="index.html#work">Projets</a></li>
-          <li class="dropdown"><a href="#"><span>Stages</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Stages</span></a>
             <ul>
               <li><a href="stage1.html">Première Année</a></li>
               <li><a href="stage2.html">Deuxième Année</a></li>
@@ -112,19 +112,23 @@
                 <li><strong>Taille</strong>: Petite entreprise</li>
                 <li><strong>Effectif</strong>: 2 personnes</li>
                 <li><strong>Secteur d’activité</strong>: Dentaire et Numérique</li>
+                <li><strong>Capital Social</strong>: 3.000 euros</li>
               </ul>
             </div>
             <div class="portfolio-info">
               <h3>Historique</h3>
               <p>
-              Après avoir travaillé dans l'industrie nucléaire, Daniel Marques a lancé sa propre entreprise Miid Services.
+              Après avoir travaillé dans l'industrie nucléaire, Daniel Marques a lancé sa propre entreprise Miid Services.<br>
+                Il s'agit d'une PME qui installe du matériel informatique et dentaires dans les nouveaux cabinets.<br>
               </p>
             </div>
             <div class="portfolio-info">
               <h3>RGPD</h3>
-              <ul>
-                <li><strong>J'attends les informations</strong></li>
-              </ul>
+             <ul>
+               <li>
+                 L'entreprise M.I.I.D Service est conformes aux normes dictées par le RGPD.
+               </li>
+             </ul>
             </div>
             <div class="portfolio-info">
               <h3>Ressources Tangibles et Intangibles</h3>
