--- a/stage2.html
+++ b/stage2.html
@@ -41,7 +41,7 @@
           <li><a class="nav-link scrollto" href="index.html#about">A Propos</a></li>
           <li><a class="nav-link scrollto" href="index.html#services">Parcours</a></li>
           <li><a class="nav-link scrollto" href="index.html#work">Projets</a></li>
-          <li class="dropdown"><a href="#"><span>Stages</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Stages</span></a>
             <ul>
               <li><a href="stage1.html">Première Année</a></li>
               <li><a href="stage2.html">Deuxième Année</a></li>
@@ -123,7 +123,7 @@
             <div class="portfolio-info">
               <h3>RGPD</h3>
               <ul>
-                <li><strong>J'attends les informations</strong></li>
+                <li>En tant que société dans le domaine de la cyberécurité, Sconnect se doit de respecter les données personnelles de ses clients et de respecter les normes imposées par le RGPD</li>
               </ul>
             </div>
             <div class="portfolio-info">
