--- a/Hackathon.html
+++ b/Hackathon.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body>
+<body style="height: 300vh;">
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
@@ -48,7 +48,7 @@
 
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="index.html/#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -61,12 +61,12 @@
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h2 class="hero-title mb-4">Ceta Bot</h2>
+          <h2 class="hero-title mb-4">Orange</h2>
           <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
-              <a href="index.html">Home</a>
+              <a href="index.html">Hackathon</a>
             </li>
-            <li class="breadcrumb-item active">CetaBot</li>
+            <li class="breadcrumb-item active"></li>
           </ol>
         </div>
       </div>
@@ -86,7 +86,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="images/CetaBot.png" alt="">
+                  <img src="images/Orange.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="images/moiHackathon.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="images/HelpOrtWeb.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="images/statsHOJava.png" alt="">
                 </div>
 
               </div>
@@ -98,26 +110,43 @@
             <div class="portfolio-info">
               <h3>Identification</h3>
               <ul>
-                <li><strong>Dénomination</strong>: CetaBot</li>
-                <li><strong>Language</strong>: Javascript</li>
-                <li><strong>IDE</strong>: Visual Studio Code</li>
-                <li><strong>Réseau relié</strong>: Discord </li>
-                <li><strong>Utilités</strong>: Administration</li>
+                <li><strong>Dénomination</strong>: HelpOrt</li>
+                <li><strong>Languages</strong>: PHP, HTML, CSS / Java, SQL</li>
+                <li><strong>IDE</strong>: PhpStorm / IntelliJ Idea</li>
+                <li><strong>Framework</strong>: Symfony / Java FXML</li>
               </ul>
             </div>
             <div class="portfolio-info">
               <h3>Historique</h3>
               <p>
-              Ce bot discord est une entité à part entière permettant d'aider au management des serveurs Discord.
-                Il est programmé à mon image, majoritairement pour pour gérer le nombre d'utilisateur dans un serveur.
+              Ce projet à pour but de créer un forum d'entraide pour les étudiants. <br>
+                Un étudiant dans le besoin poste une demande d'aide pour une matière, et un étudiant plus agé peut lui apporter un soutien.<br>
+                Un administrateur est présent pour gérer les différents soutien et leurs attribuer une salle.
               </p>
             </div>
+            <div class="portfolio-info">
+              <h3>Ressources Tangibles et Intangibles</h3>
+              <ul>
+                <li><strong>Ressources Tangibles</strong></li>
+                <li>Bureaux</li>
+                <li><strong>Ressources Intangibles</strong></li>
+                <li>Site Internet</li>
+              </ul>
+            </div>
           </div>
+
         </div>
 
       </div>
-    </section><!-- End Portfolio Details Section -->
+    </section>
+    <!-- End Portfolio Details Section -->
 
+    <!-- ======= Portfolio Details Section ======= -->
+    <section id="portfolio-schema" class="portfolio-details">
+      <div class="container">
+        <img src="#" style="width: 100%; height: 80vh; background-color: #0f5132;">
+      </div>
+    </section>
   </main><!-- End #main -->
 
 
