Mise à jour Projets

--- a/Hackathon.html
+++ b/Hackathon.html
@@ -88,17 +88,17 @@
                 <div class="swiper-slide">
                   <img src="images/Orange.png" alt="">
                 </div>
-
+                <div class="swiper-slide">
+                  <img src="images/harmonIAdiapo.jpg" alt="">
+                </div>
                 <div class="swiper-slide">
                   <img src="images/moiHackathon.jpg" alt="">
                 </div>
-
                 <div class="swiper-slide">
-                  <img src="images/HelpOrtWeb.png" alt="">
+                  <img src="images/harmonia.png" alt="">
                 </div>
-
                 <div class="swiper-slide">
-                  <img src="images/statsHOJava.png" alt="">
+                  <img src="images/presentHarmonIAGeneral.jpg" alt="">
                 </div>
 
               </div>
@@ -110,27 +110,28 @@
             <div class="portfolio-info">
               <h3>Identification</h3>
               <ul>
-                <li><strong>Dénomination</strong>: HelpOrt</li>
-                <li><strong>Languages</strong>: PHP, HTML, CSS / Java, SQL</li>
-                <li><strong>IDE</strong>: PhpStorm / IntelliJ Idea</li>
-                <li><strong>Framework</strong>: Symfony / Java FXML</li>
+                <li><strong>Dénomination</strong>: HarmonIA</li>
+                <li><strong>Maquettage</strong>: Canva</li>
+                <li><strong>Durée</strong>: 1 semaine</li>
+                <li><strong>Problème</strong>: Inégalités salariales</li>
               </ul>
             </div>
             <div class="portfolio-info">
               <h3>Historique</h3>
               <p>
-              Ce projet à pour but de créer un forum d'entraide pour les étudiants. <br>
-                Un étudiant dans le besoin poste une demande d'aide pour une matière, et un étudiant plus agé peut lui apporter un soutien.<br>
-                Un administrateur est présent pour gérer les différents soutien et leurs attribuer une salle.
+                Ce projet est issu d'un partenariat entre l'ORT et l'entreprise Orange. <br>
+                Il nous a été demandé plusieurs problématiques sur la RSE et la Big Data.<br>
+                Mon groupe et moi même nous sommes penchés sur les inégalités des augmentations et des salaires de manière générale.
               </p>
             </div>
             <div class="portfolio-info">
               <h3>Ressources Tangibles et Intangibles</h3>
               <ul>
                 <li><strong>Ressources Tangibles</strong></li>
-                <li>Bureaux</li>
+                <li>Locaux</li>
                 <li><strong>Ressources Intangibles</strong></li>
-                <li>Site Internet</li>
+                <li>logiciel Internet de maquettage</li>
+                <li>Sondage</li>
               </ul>
             </div>
           </div>
@@ -152,7 +153,7 @@
 
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><img src="images/plus-circle.png"></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
