--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                         <p><span class="title-s">Téléphone: </span> <span><a href="tel:0630328111">06 30 32 81 11</a></span></p>
                         <p><span class="title-s">Langues: </span> <span>
                           <ul>
-                            <li>Français ==> Confirmé</li>
-                             <li>Anglais ==> Assez bon</li>
+                            <li>Français ==> Confirmé (maternelle)</li>
+                             <li>Anglais ==> Assez bon (B1)</li>
                              <li>Espanol ==> Les bases</li>
                             <li>Japonais ==> Quelques mots</li>
                         </ul></span></p>
@@ -145,7 +145,7 @@
                       Je suis donc capable de m'impliquer, peu importe l'importance de la tâche. La détermination est primordiale.
                     </p>
                     <p class="lead">
-                      Mes domaines préférés sont la Culture Economique, Juridique et Managériale, l'Anglais, le Marketing Digital et le Community Management.
+                      Mes domaines préférés sont la Culture Economique, Juridique et Managériale, l'Anglais, les Mathématiques et la Physique.
                     </p>
                     <p class="lead">
                       Je me décrirais comme quelqu'un de curieux, optimiste, dynamique et déterminé.
@@ -315,7 +315,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="CetaBot.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="CetaBot.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
                     </div>
                   </div>
                 </div>
@@ -339,7 +339,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="IDC.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="IDC.html"><img src="images/plus-circle.png" style="width: 40px;"></span></a>
                     </div>
                   </div>
                 </div>
@@ -363,7 +363,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="stage1.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="stage1.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
                     </div>
                   </div>
                 </div>
@@ -387,7 +387,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="stage2.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="stage2.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
                     </div>
                   </div>
                 </div>
@@ -411,7 +411,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="HelpOrt.html"><span class="bi bi-1-circle"></span></a>
+                      <a href="HelpOrt.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
                     </div>
                   </div>
                 </div>
