--- a/CetaBot.html
+++ b/CetaBot.html
@@ -88,7 +88,9 @@
                 <div class="swiper-slide">
                   <img src="images/CetaBot.png" alt="">
                 </div>
-
+                <div class="swiper-slide">
+                  <img src="images/idcBotCode.png" alt="">
+                </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -102,13 +104,13 @@
                 <li><strong>Language</strong>: Javascript</li>
                 <li><strong>IDE</strong>: Visual Studio Code</li>
                 <li><strong>Réseau relié</strong>: Discord </li>
-                <li><strong>Utilités</strong>: Administration</li>
+                <li><strong>Utilités</strong>: Administration / Divertissement</li>
               </ul>
             </div>
             <div class="portfolio-info">
               <h3>Historique</h3>
               <p>
-              Ce bot discord est une entité à part entière permettant d'aider au management des serveurs Discord.
+                Ce bot discord est une entité à part entière permettant d'aider au management des serveurs Discord.
                 Il est programmé à mon image, majoritairement pour pour gérer le nombre d'utilisateur dans un serveur.
               </p>
             </div>
@@ -123,7 +125,7 @@
 
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><img src="images/plus-circle.png"></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
