--- a/HelpOrt.html
+++ b/HelpOrt.html
@@ -41,7 +41,7 @@
           <li><a class="nav-link scrollto" href="index.html#about">A Propos</a></li>
           <li><a class="nav-link scrollto" href="index.html#services">Parcours</a></li>
           <li><a class="nav-link scrollto" href="index.html#work">Projets</a></li>
-          <li class="dropdown"><a href="#"><span>Stages</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Stages</span></a>
             <ul>
               <li><a href="stage1.html">Première Année</a></li>
               <li><a href="stage2.html">Deuxième Année</a></li>
@@ -145,7 +145,7 @@
 
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><img src="images/plus-circle.png"></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
