--- a/IDC.html
+++ b/IDC.html
@@ -88,6 +88,9 @@
                 <div class="swiper-slide">
                   <img src="images/IDC.png" alt="">
                 </div>
+                <div class="swiper-slide">
+                  <img src="images/MCDIDC.png" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -134,7 +137,7 @@
 
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><img src="images/plus-circle.png"></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
