Mise à jour Projets 2.0

--- a/CetaBot.html
+++ b/CetaBot.html
@@ -110,8 +110,8 @@
             <div class="portfolio-info">
               <h3>Historique</h3>
               <p>
-                Ce bot discord est une entité à part entière permettant d'aider au management des serveurs Discord.
-                Il est programmé à mon image, majoritairement pour pour gérer le nombre d'utilisateur dans un serveur.
+                Ce bot discord est une entité à part entière permettant d'aider au management des serveurs Discord. <br>
+                Il est programmé à mon image, majoritairement pour gérer le nombre d'utilisateurs dans un serveur, l'ambiance générale et le respect de chacun.
               </p>
             </div>
           </div>
