--- a/Hackathon.html
+++ b/Hackathon.html
@@ -64,9 +64,9 @@
           <h2 class="hero-title mb-4">Orange</h2>
           <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
-              <a href="index.html">Hackathon</a>
+              <a href="index.html">Home</a>
             </li>
-            <li class="breadcrumb-item active"></li>
+            <li class="breadcrumb-item active">Hackathon</li>
           </ol>
         </div>
       </div>
@@ -143,11 +143,6 @@
     <!-- End Portfolio Details Section -->
 
     <!-- ======= Portfolio Details Section ======= -->
-    <section id="portfolio-schema" class="portfolio-details">
-      <div class="container">
-        <img src="#" style="width: 100%; height: 80vh; background-color: #0f5132;">
-      </div>
-    </section>
   </main><!-- End #main -->
 
 
