--- a/index.html
+++ b/index.html
@@ -372,9 +372,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="images/SConnect.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" href="stage2.html">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="stage2.html">
                 <div class="work-img">
-                  <img src="images/SConnect.jpg" alt="" class="img-fluid">
+                  <img src="images/SConnect.jpg" alt="" class="img-fluid"  style="height: 56vh;">
                 </div>
               </a>
               <div class="work-content">
