--- a/stage1.html
+++ b/stage1.html
@@ -88,15 +88,15 @@
                 <div class="swiper-slide">
                   <img src="images/MiidS.png" alt="">
                 </div>
-
                 <div class="swiper-slide">
                   <img src="images/MiidScreen.png" alt="">
                 </div>
-
                 <div class="swiper-slide">
                   <img src="images/MiidCodeScreen.png" alt="">
                 </div>
-
+                <div class="swiper-slide">
+                  <img src="images/MentionsMIIDS.png" alt="">
+                </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
