--- a/stage2.html
+++ b/stage2.html
@@ -88,13 +88,14 @@
                 <div class="swiper-slide">
                   <img src="images/SConnect.jpg" alt="">
                 </div>
-
                 <div class="swiper-slide">
                   <img src="images/screendevSconnect.png" alt="">
                 </div>
-
                 <div class="swiper-slide">
                   <img src="images/carouselSconnect.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="images/SConnectMentions.png" alt="">
                 </div>
 
               </div>
