Mise à jour Stages

--- a/stage1.html
+++ b/stage1.html
@@ -108,17 +108,17 @@
               <ul>
                 <li><strong>Dénomination</strong>: M.I.I.D Services</li>
                 <li><strong>Adresse</strong>: 60 Rue Boileau, 91600 Savigny-sur-Orge</li>
-                <li><strong>Forme juridique</strong>: SURL </li>
+                <li><strong>Forme juridique</strong>: SARL </li>
                 <li><strong>Taille</strong>: Petite entreprise</li>
                 <li><strong>Effectif</strong>: 2 personnes</li>
                 <li><strong>Secteur d’activité</strong>: Dentaire et Numérique</li>
-                <li><strong>Capital Social</strong>: 3.000 euros</li>
+                <li><strong>Capital Social</strong>: 16.000 euros</li>
               </ul>
             </div>
             <div class="portfolio-info">
               <h3>Historique</h3>
               <p>
-              Après avoir travaillé dans l'industrie nucléaire, Daniel Marques a lancé sa propre entreprise Miid Services.<br>
+                Après avoir travaillé dans l'industrie nucléaire, Daniel Marques a lancé sa propre entreprise Miid Services.<br>
                 Il s'agit d'une PME qui installe du matériel informatique et dentaires dans les nouveaux cabinets.<br>
               </p>
             </div>
@@ -142,7 +142,7 @@
             <div class="portfolio-info">
               <h3>RSE</h3>
               <ul>
-                <li><strong>J'attends les informations</strong></li>
+                <li>La société Sconnect respecte les valeurs de la démarche RSE</li>
               </ul>
             </div>
             <div class="portfolio-description">
