--- a/stage2.html
+++ b/stage2.html
@@ -118,7 +118,8 @@
             <div class="portfolio-info">
               <h3>Historique</h3>
               <p>
-                Après avoir du suspendre le local pendant la pandémie du Coronavirus, Mr. Sylla a relancé ses activités au sein de son entreprise Sconnect.
+                Après avoir du suspendre le local pendant la pandémie du Coronavirus, Mr. Sylla a relancé ses activités au sein de son entreprise Sconnect. <br>
+                Entre temps, Le directeur Général de l'entreprise a travaillé un temps chez <a href="https://www.megacybersecurity.com">MEGA</a>
               </p>
             </div>
             <div class="portfolio-info">
@@ -131,17 +132,17 @@
               <h3>Ressources Tangibles et Intangibles</h3>
               <ul>
                 <li><strong>Ressources Tangibles</strong></li>
-                <li>Bureaux</li>
+                <li>Ecrans publicitaires</li>
                 <li>Local</li>
                 <li><strong>Ressources Intangibles</strong></li>
                 <li>Site Internet</li>
-                <li>Logiciel</li>
+                <li>Logiciel "techpub" </li>
               </ul>
             </div>
             <div class="portfolio-info">
               <h3>RSE</h3>
               <ul>
-                <li><strong>J'attends les informations</strong></li>
+                <li>La société Sconnect respecte les valeurs de la démarche RSE</li>
               </ul>
             </div>
             <div class="portfolio-description">
