Mise à jour HelpOrt

--- a/HelpOrtJava.html
+++ b/HelpOrtJava.html
@@ -92,11 +92,6 @@
                 <div class="swiper-slide">
                   <img src="images/demandeJava.png" alt="">
                 </div>
-
-                <div class="swiper-slide">
-                  <img src="images/HelpOrtWeb.png" alt="">
-                </div>
-
                 <div class="swiper-slide">
                   <img src="images/statsHOJava.png" alt="">
                 </div>
@@ -110,10 +105,10 @@
             <div class="portfolio-info">
               <h3>Identification</h3>
               <ul>
-                <li><strong>Dénomination</strong>: HelpOrt</li>
-                <li><strong>Languages</strong>: PHP, HTML, CSS / Java, SQL</li>
-                <li><strong>IDE</strong>: PhpStorm / IntelliJ Idea</li>
-                <li><strong>Framework</strong>: Symfony / Java FXML</li>
+                <li><strong>Dénomination</strong>: HelpOrt Java</li>
+                <li><strong>Languages</strong>: Java, SQL</li>
+                <li><strong>IDE</strong>: IntelliJ Idea</li>
+                <li><strong>Framework</strong>: Java FXML</li>
               </ul>
             </div>
             <div class="portfolio-info">
@@ -121,7 +116,7 @@
               <p>
               Ce projet à pour but de créer un forum d'entraide pour les étudiants. <br>
                 Un étudiant dans le besoin poste une demande d'aide pour une matière, et un étudiant plus agé peut lui apporter un soutien.<br>
-                Un administrateur est présent pour gérer les différents soutien et leurs attribuer une salle.
+                Un administrateur est présent pour gérer les différents soutiens et leur attribuer une salle.
               </p>
             </div>
             <div class="portfolio-info">
