--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           </div>
           <div class="col-md-4"  style="height: 70.5vh;">
             <div class="work-box" style="height: 70.5vh;">
-              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="HelpOrt.html">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="HelpOrtJava.html">
                 <div class="work-img" style="height: 56vh;">
                   <img src="images/HelpOrtJava.png" alt="" class="img-fluid" style="height: 60vh;">
                 </div>
@@ -411,7 +411,31 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="HelpOrt.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                      <a href="HelpOrtJava.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4"  style="height: 70.5vh;">
+            <div class="work-box" style="height: 70.5vh;">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="HelpOrtJava.html">
+                <div class="work-img" style="height: 56vh;">
+                  <img src="images/HelpOrtWeb.png" alt="" class="img-fluid" style="height: 60vh;">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">HelpOrt</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Projet Scolaire</span> / Début: <span class="w-date"> Septembre 2023</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="HelpOrtJava.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
                     </div>
                   </div>
                 </div>
